unpackaged/main/default/objects/Third_Party_Monthly_Actual__c/Third_Party_Monthly_Actual__c.object-meta.xml
<CustomObject>
    <label>Third Party Monthly Actual</label>
    <nameField>
        <displayFormat>TPMAR-{00000}</displayFormat>
        <label>Third Party Monthly Actual</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Monthly Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>