unpackaged/main/default/objects/Third_Party_Monthly_Actual__c/fields/Campaign_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Identifier__c</fullName>
    <label>Campaign Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>