unpackaged/main/default/objects/Third_Party_Monthly_Actual__c/fields/Local_Server_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Server_Name__c</fullName>
    <label>Local Server Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>